--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,16 @@ services:
     environment:
       DATABASE_URL: postgresql://myuser:mypassword@db:5432/mydatabase
 
+  pgadmin:  # ✅ Add pgAdmin service
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+
 volumes:
   pgdata:
