--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,5 +44,11 @@ services:
     depends_on:
       - db
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+
 volumes:
   pgdata:
