--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     environment:
       DATABASE_URL: postgresql://myuser:mypassword@db:5432/mydatabase
     command: >
-      sh -c "python -c 'from app.db.database import engine; from app.models.sqlalchemy.sql_locations import Base; Base.metadata.create_all(bind=engine)' &&
+      sh -c "python -c 'from app.db.database import engine; from app.models.sqlalchemy.sql_office import Base; Base.metadata.create_all(bind=engine)' &&
       python seed.py &&
       uvicorn app.main:app --host 0.0.0.0 --port 8000"
 
