Added basic tests showing how to utilize fixtures and markers

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,6 @@ python_functions = test_*
 log_cli_level = INFO
 log_file_level = INFO
 log_file = pytest.log
+markers =
+    method_1: mark test with method_1
+    method_2: mark test with method_2
