Passing parametrized tests added to example_tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,3 +10,4 @@ log_file = pytest.log
 markers =
     method_1: mark test with method_1
     method_2: mark test with method_2
+    parametrized: mark test with parametrized
