--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ log_cli_level = INFO
 log_file_level = INFO
 log_file = pytest.log
 markers =
+    auth_queries
     method_1: mark test with method_1
     method_2: mark test with method_2
     parametrized: mark test with parametrized
