--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,7 @@ log_file_level = INFO
 log_file = pytest.log
 markers =
     auth_queries
+    auth_routers
     method_1: mark test with method_1
     method_2: mark test with method_2
     parametrized: mark test with parametrized
