--- a/pytest.ini
+++ b/pytest.ini
@@ -10,6 +10,7 @@ log_file = pytest.log
 markers =
     auth_queries
     auth_routers
+    company_queries
     method_1: mark test with method_1
     method_2: mark test with method_2
     parametrized: mark test with parametrized
