Added unit tests for company_routers

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,7 @@ markers =
     auth_queries
     auth_routers
     company_queries
+    company_routers
     method_1: mark test with method_1
     method_2: mark test with method_2
     parametrized: mark test with parametrized
